--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@tensorflow/tfjs": "^0.10.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
@@ -43,6 +44,16 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "@types/lodash": "^4.14.104",
+    "browserify": "^16.0.0",
+    "browserify-shim": "^3.8.14",
+    "concurrently": "^3.5.1",
+    "lodash": "^4.17.5",
+    "mkdirp": "^0.5.1",
+    "node-sass": "^4.7.2",
+    "tsify": "^3.0.4",
+    "uglify-js": "^3.3.10",
+    "watchify": "^3.10.0"
   }
 }
